add media queries for article.html and correct font-links

--- a/article.html
+++ b/article.html
@@ -9,6 +9,10 @@
     <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style/style.css">
     <title>ShopOnline</title>
 </head>
@@ -28,15 +32,15 @@
                 тряпочкой и на этом остановиться.
                 Так же, как кожа лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит
                 срок службы любимой пары и сделает её аккуратной и сияющей, словно только что из магазина.</p>
-            <nav class="navigatin">
-                <ol class="navigatin__list">
-                    <li class="navigatin__item">
+            <nav class="navigation">
+                <ol class="navigation__list">
+                    <li class="navigation__item">
                         <a href="#partone">На что стоит обратить внимание перед покупкой</a>
                     </li>
-                    <li class="navigatin__item">
+                    <li class="navigation__item">
                         <a href="#parttwo">Перед тем, как надеть обувь первый раз</a>
                     </li>
-                    <li class="navigatin__item">
+                    <li class="navigation__item">
                         <a href="#partthree">Ежедневный уход за кожаной обувью в домашних условиях</a>
                     </li>
                 </ol>
