--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="preload" href="fonts/lato-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/lato-bold.woff2" as="font" type="font/woff2" crossorigin>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style/style.css">
+    <script src="script/script.js" defer></script>
+
     <title>Main page</title>
 </head>
 
@@ -14,7 +22,7 @@
     <section class="blog">
         <div class="container">
             <ul class="blog__list">
-                <a href="#" class="blog__link">
+                <a href="article.html" target="_blank" class="blog__link">
                     <li class="blog__item">
                         <img src="/img/1_shoos.png" alt="shoose" class="blog__img">
                         <div class="blog__content">
