--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 <body>
     <section class="blog">
         <div class="container">
-            <ul class="blog__list">
+            <ul class="blog__list" data-page="listPages">
                 <a href="article.html" target="_blank" class="blog__link">
                     <li class="blog__item">
                         <img src="/img/1_shoos.png" alt="shoose" class="blog__img">
@@ -182,26 +182,22 @@
             </ul>
             <footer class="blog__footer footer">
                 <button class="footer__btn footer__btn-previous">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37" fill="none">
-                        <g clip-path="url(#clip0_0_255)">
-                            <path
-                                d="M32.375 16.9583H10.5296L16.0487 11.4237L13.875 9.25L4.625 18.5L13.875 27.75L16.0487 25.5763L10.5296 20.0417H32.375V16.9583Z"
-                                fill="#8F8F8F" />
-                        </g>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37"
+                        fill="currentColor">
+                        <path
+                            d="M32.375 16.9583H10.5296L16.0487 11.4237L13.875 9.25L4.625 18.5L13.875 27.75L16.0487 25.5763L10.5296 20.0417H32.375V16.9583Z" />
                     </svg>
                 </button>
-                <div class="footer__list">
-                    <a href="#" class="footer__page">1</a>
-                    <a href="#" class="footer__page">2</a>
-                    <a href="#" class="footer__page">3</a>
-                </div>
+                <ul class="footer__list" id="pagination">
+                    <li class="footer__page">1</li>
+                    <li class="footer__page">2</li>
+                    <li class="footer__page">3</li>
+                </ul>
                 <button class="footer__btn footer__btn-next">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37" fill="none">
-                        <g clip-path="url(#clip0_0_258)">
-                            <path
-                                d="M4.625 16.9583H26.4704L20.9513 11.4237L23.125 9.25L32.375 18.5L23.125 27.75L20.9513 25.5763L26.4704 20.0417H4.625V16.9583Z"
-                                fill="#3670C7" />
-                        </g>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37"
+                        fill="currentColor">
+                        <path
+                            d="M32.375 16.9583H10.5296L16.0487 11.4237L13.875 9.25L4.625 18.5L13.875 27.75L16.0487 25.5763L10.5296 20.0417H32.375V16.9583Z" />
                     </svg>
                 </button>
             </footer>
