made function for create page accordint to page from data and pagination for 1-3

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style/style.css">
-    <script src="script/script.js" defer></script>
+    <!-- <script src="script/script.js" defer></script> -->
+    <script src="script/pagination.js" type="module"></script>
 
     <title>Main page</title>
 </head>
@@ -189,9 +190,9 @@
                     </svg>
                 </button>
                 <ul class="footer__list" id="pagination">
-                    <li class="footer__page">1</li>
+                    <!-- <li class="footer__page">1</li>
                     <li class="footer__page">2</li>
-                    <li class="footer__page">3</li>
+                    <li class="footer__page">3</li> -->
                 </ul>
                 <button class="footer__btn footer__btn-next">
                     <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 37 37"
