feat: made new article.html and media query except of mobile

--- a/article.html
+++ b/article.html
@@ -43,9 +43,9 @@
                     Но это совсем не означает, что можно раз в полгода протереть обувь тряпочкой и на этом остановиться.
                     Так же, как кожа лица и тела, материал обуви нуждается в заботе. Регулярный уход надолго продлит
                     срок службы любимой пары и сделает её аккуратной и сияющей, словно только что из магазина.</p>
-                <div class="article__footer">
-                    <a href="blog.html" class="article__footer-return">К списку статей</a>
-                    <div class="article__footer-info">
+                <div class="article__bottom">
+                    <a href="blog.html" class="article__bottom-return">К списку статей</a>
+                    <div class="article__bottom-info">
                         <p class="article__author">Инга Соловьева</p>
                         <p class="article__data">22 октября 2021, 12:45</p>
                         <div class="blog__info">
@@ -55,10 +55,22 @@
                     </div>
                 </div>
             </div>
-            <div class="article__promo">
-                <img class="article__promo-img" src="./img/Promo-1.png" width="532" alt="Фото рекламы 1">
-                <img class="article__promo-img" src="./img/Promo-2.png" width="532" alt="Фото рекламы 2">
-            </div>
+            <ul class="article__promo">
+                <li class="article__promo-item">
+                    <img class="article__promo-img" src="./img/Promo-1.png" width="532" alt="Фото рекламы 1">
+                    <div class="article__promo-block">
+                        <h4 class="article__promo-block-title">Горящие туры в Стамбул от 20 000 руб.</h4>
+                        <p class="article__promo-block-text">Окунись в настоящую восточную сказку</p>
+                    </div>
+                </li>
+                <li class="article__promo-item">
+                    <img class="article__promo-img" src="./img/Promo-2.png" width="532" alt="Фото рекламы 2">
+                    <div class="article__promo-block">
+                        <h4 class="article__promo-block-title">Новый RENAULT DUSTER</h4>
+                        <p class="article__promo-block-text">Легендарный внедорожник в новом дизайне</p>
+                    </div>
+                </li>
+            </ul>
         </div>
     </article>
 </body>
