--- a/article.html
+++ b/article.html
@@ -20,12 +20,14 @@
     <article class="article">
         <header class="article__header">
             <a href="blog.html" target="_blank" class="header__link">Главная</a>
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+            <svg class="header__svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
+                fill="none">
                 <path d="M6.44238 12.4425L9.87738 9L6.44238 5.5575L7.49988 4.5L11.9999 9L7.49988 13.5L6.44238 12.4425Z"
                     fill="#525252" />
             </svg>
             <a href="mainPage.html" target="_blank" class="header__link">Блог</a>
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+            <svg class="header__svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
+                fill="none">
                 <path d="M6.44238 12.4425L9.87738 9L6.44238 5.5575L7.49988 4.5L11.9999 9L7.49988 13.5L6.44238 12.4425Z"
                     fill="#525252" />
             </svg>
