feat: continue without results

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style/style.css">
     <!-- <script src="script/script.js" defer></script> -->
     <script src="script/pagination.js" type="module"></script>
@@ -23,7 +22,7 @@
     <section class="blog">
         <div class="container">
             <ul class="blog__list" data-page="listPages">
-                <a href="article.html" target="_blank" class="blog__link">
+                <!-- <a href="article.html" target="_blank" class="blog__link">
                     <li class="blog__item">
                         <img src="/img/1_shoos.png" alt="shoose" class="blog__img">
                         <div class="blog__content">
@@ -178,8 +177,7 @@
                             </div>
                         </div>
                     </li>
-                </a>
-
+                </a> -->
             </ul>
             <footer class="blog__footer footer">
                 <button class="footer__btn footer__btn-previous">
