--- a/article.html
+++ b/article.html
@@ -14,6 +14,8 @@
 
     <link rel="stylesheet" href="style/style.css">
     <title>Article</title>
+
+    <script src="script/article.js" type="module"></script>
 </head>
 
 <body>
