--- a/article.html
+++ b/article.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <article class="article">
+    <!-- <article class="article">
         <header class="article__header">
             <a href="blog.html" target="_blank" class="header__link">Главная</a>
             <svg class="header__svg" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
@@ -76,7 +76,7 @@
                 </li>
             </ul>
         </div>
-    </article>
+    </article> -->
 </body>
 
 </html>
